# chameleon-telegram

./: Cargo.toml  README.md
crates/chameleon-bridge/: Cargo.toml
crates/chameleon-bridge/src/: main.rs
crates/chameleon-client/: Cargo.toml
crates/chameleon-client/src/: main.rs
crates/chameleon-core/: Cargo.toml
crates/chameleon-core/src/: allowlist.rs  config.rs  crypto.rs  error.rs  framing.rs  lib.rs  protocol.rs  relay.rs  transport.rs
crates/chameleon-core/tests/: core_tests.rs
