[package]
name = "chameleon-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chameleon-core = { path = "../chameleon-core" }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "signal", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tower = "0.4"
