[package]
name = "chameleon-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
base64 = "0.22"
snow = "0.9"
tracing = "0.1"
thiserror = "1"
ipnet = "2"

[dev-dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync"] }
